trying to fix bg pic not showing in page

--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@ nav .resume-btn{
 
 /* banner */
 .Hero {
-  background-image: url(./assets/Hero-bg.png);
+  background-image: url(../assets/Hero-bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -253,7 +253,7 @@ main{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url("./assets/handshake.jpg");
+  background-image: url("../assets/handshake.jpg");
   margin-bottom: 80px;
   border-radius: 16px;
   background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2);
